# ReOpenLDAP

./: .clang-format  .gitignore  .travis.yml  ANNOUNCEMENT  ANNOUNCEMENT.OpenLDAP  AUTHORS  CHANGES  CHANGES-ReOpenLDAP.txt  CHANGES.OpenLDAP  CONTRIBUTING.md  COPYRIGHT  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.OpenLDAP  README.md  TODO.md  aclocal.m4  bootstrap.sh  circle.yml  configure  configure.ac  configure.in  ps-build.sh  reldap_autoconf.h.in  releasenotes.txt
clients/tools/: Makefile.am  Makefile.in  common.c  common.h  ldapcompare.c  ldapdelete.c  ldapexop.c  ldapmodify.c  ldapmodrdn.c  ldappasswd.c  ldapsearch.c  ldapurl.c  ldapvc.c  ldapwhoami.c
contrib/: Makefile.am  Makefile.in  README
contrib/docker/: Dockerfile  README.md  slapd.sample.conf
contrib/ldapc++/: README  TODO  aclocal.m4  configure.in  doxygen.rc
contrib/ldaptcl/: COPYRIGHT  Makefile.in  ldap.n  neoXldap.c  tclAppInit.c  tkAppInit.c
contrib/slapd-modules/: Makefile.am  Makefile.in  README  contrib-mod.mk  man.footer  man.subdir-footer
contrib/slapd-tools/: Makefile.am  Makefile.in  README  statslog
contrib/slapi-plugins/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in  avl.h  getopt-compat.h  lber.h  lber_hipagut.h  lber_pvt.h  lber_types.h.in  ldap.h  ldap_cdefs.h  ldap_config.hin  ldap_defaults.h  ldap_dirs.h.in  ldap_features.h.in  ldap_features.hin  ldap_int_thread.h  ldap_log.h  ldap_pvt.h  ldap_pvt_thread.h  ldap_pvt_uc.h  ldap_queue.h  ldap_rq.h  ldap_schema.h  ldap_utf8.h  ldif.h  lutil.h  lutil_hash.h  lutil_ldap.h  lutil_lockf.h  lutil_md5.h  lutil_meter.h  lutil_sha1.h  portable.hin  reldap.h  reopenldap.h  rewrite.h  slapi-plugin.h  sysexits-compat.h
include/ac/: alloca.h  assert.h  bytes.h  crypt.h  ctype.h  dirent.h  errno.h  fdset.h  localize.h  param.h  regex.h  setproctitle.h  signal.h  socket.h  stdarg.h  stdlib.h  string.h  sysexits.h  syslog.h  termios.h  time.h  unistd.h  wait.h
libraries/: Makefile.am  Makefile.in
libraries/liblber/: Makefile.in  bprint.c  debug.c  decode.c  encode.c  hipagut.c  io.c  lber-int.h  memory.c  options.c  sockbuf.c  stdio.c
libraries/libldap/: Makefile.in  abandon.c  add.c  bind.c  charray.c  compare.c  controls.c  cyrus.c  dds.c  delete.c  dnssrv.c  dntest.c  error.c  extended.c  fetch.c  filter.c  getattr.c  getdn.c  getentry.c  getvalues.c  gssapi.c  init.c  ldap-int.h  ldap_sync.c  ldif.c  ldifutil.c  modify.c  modrdn.c  open.c  options.c  os-ip.c  os-local.c  pagectrl.c  passwd.c  ppolicy.c  print.c  references.c  request.c  result.c  sasl.c  (+19 more)
libraries/libldap_r/: Makefile.in  rdwr.c  rmutex.c  rq.c  thr_cthreads.c  thr_nt.c  thr_posix.c  thr_pth.c  thr_stub.c  thr_thr.c  tpool.c
libraries/liblmdb/: Makefile  lmdb.h  mdb.c  mdb_stat.c
libraries/liblunicode/: CompositionExclusions.txt  MUTTUCData.txt  Makefile.am  Makefile.in  README-ucdata.txt  README-ure.txt  README-utbm.txt  api.txt  bidiapi.txt  format.txt  ucdata.c  ucdata.h  ucdata.man  ucgendat.c  ucpgba.c  ucpgba.h  ucpgba.man  ucstr.c  ure.c  ure.h  urestubs.c  utbm.c  utbm.h  utbmstub.c
libraries/liblutil/: Makefile.am  Makefile.in  avl.c  base64.c  detach.c  entropy.c  getopt.c  getpass.c  getpeereid.c  hash.c  lockf.c  md5.c  memcmp.c  meter.c  ntservice.c  passfile.c  passwd.c  ptest.c  sasl.c  setproctitle.c  sha1.c  signal.c  slapdmsg.h  slapdmsg.mc  sockpair.c  tavl.c  testavl.c  testtavl.c  utils.c  uuid.c
libraries/libmdbx/: CHANGES  CMakeLists.txt  COPYRIGHT  ChangeLog.md  GNUmakefile  README-RU.md  README.md  VERSION.json  VERSION.txt  barriers.h  defs.h  intro.doc  lmdb.h  mdb.c  mdb_chk.c  mdb_copy.1  mdb_copy.c  mdb_dump.1  mdb_dump.c  mdb_load.1  mdb_load.c  mdb_stat.1  mdb_stat.c  mdbx.c  mdbx.c++  mdbx.h  mdbx_chk.c  mdbx_copy.c  mdbx_drop.c  mdbx_dump.c  mdbx_load.c  mdbx_stat.c  midl.c  midl.h  mtest0.c  mtest1.c  mtest2.c  mtest3.c  mtest4.c  mtest5.c  (+8 more)
libraries/libreldap/: Makefile.am  Makefile.in  abandon.c  add.c  addentry.c  assertion.c  bind.c  bprint.c  cancel.c  charray.c  compare.c  controls.c  crutch.c  cyrus.c  dds.c  debug.c  decode.c  delete.c  deprecated.c  deref.c  dnssrv.c  encode.c  error.c  extended.c  fetch.c  filter.c  free.c  getattr.c  getdn.c  getentry.c  getvalues.c  gssapi.c  hipagut.c  init.c  io.c  lbase64.c  lber-int.h  lber_options.c  ldap-int.h  ldap-tls.h  (+54 more)
libraries/librewrite/: Copyright  Makefile.am  Makefile.in  config.c  context.c  info.c  ldapmap.c  map.c  params.c  parse.c  rewrite-int.h  rewrite-map.h  rewrite.c  rule.c  session.c  subst.c  var.c  xmap.c
servers/slapd/: DB_CONFIG  Makefile.am  Makefile.in  abandon.c  aci.c  acl.c  aclparse.c  ad.c  add.c  alock.c  alock.h  at.c  attr.c  ava.c  backend.c  backglue.c  backover.c  backtrace.c  bconfig.c  biglock.c  bind.c  cancel.c  ch_malloc.c  compare.c  component.c  component.h  config.c  config.h  connection.c  controls.c  cr.c  ctxcsn.c  daemon.c  delete.c  dn.c  doom.c  entry.c  extended.c  filter.c  filterentry.c  (+68 more)
tests/: Makefile.am  Makefile.in  run.in
tests/data/: ditcontentrules.conf  dn.out  ndb.conf  nis_sample.ldif  referrals.out  relay.out  retcode.conf  slapd-2db.conf  slapd-aci.conf  slapd-acl.conf  slapd-cache-master-proxyauthz.conf  slapd-cache-master.conf  slapd-chain1.conf  slapd-chain2.conf  slapd-component.conf  slapd-config-naked.conf  slapd-config-undo.conf  slapd-dds.conf  slapd-deltasync-master.conf  slapd-deltasync-slave.conf  slapd-dn.conf  slapd-dnssrv.conf  slapd-dynlist.conf  slapd-emptydn.conf  slapd-glue-ldap.conf  slapd-glue-syncrepl1.conf  slapd-glue-syncrepl2.conf  slapd-glue.conf  slapd-idassert.conf  slapd-ldapglue.conf  slapd-ldapgluegroups.conf  slapd-ldapgluepeople.conf  slapd-limits.conf  slapd-master.conf  slapd-meta-target1.conf  slapd-meta-target2.conf  slapd-meta.conf  slapd-nis-master.conf  slapd-passwd.conf  slapd-pcache.conf  (+35 more)
tests/progs/: Makefile.am  Makefile.in  ldif-filter.c  slapd-addel.c  slapd-auth.c  slapd-bind.c  slapd-common.c  slapd-common.h  slapd-modify.c  slapd-modrdn.c  slapd-mtread.c  slapd-read.c  slapd-search.c  slapd-tester.c
(+1305 files in other folders)
